@@ -311,7 +311,7 @@ type vernac_expr =
       locality_flag * onlyparsing_flag
   | VernacDeclareImplicits of locality_flag * reference or_by_notation *
       (explicitation * bool * bool) list option
-  | VernacReserve of lident list * constr_expr
+  | VernacReserve of simple_binder list
   | VernacGeneralizable of locality_flag * (lident list) option
   | VernacSetOpacity of
       locality_flag * (Conv_oracle.level * reference or_by_notation list) list
